--- a/build.gradle
+++ b/build.gradle
@@ -47,15 +47,15 @@ buildscript {
         grpcVersion = '1.20.0'
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
+        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
 //        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.60-eap-25"
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.50"
         classpath "io.realm:realm-gradle-plugin:5.7.0"
 //        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.8"
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha11"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
 
-        classpath 'com.google.gms:google-services:4.3.2'
+        classpath 'com.google.gms:google-services:4.3.3'
         classpath 'io.fabric.tools:gradle:1.28.1'
         classpath 'com.google.firebase:perf-plugin:1.3.1'
         classpath 'com.hawksjamesf.plugin:perf:1.0.0'
