--- a/common/build.gradle
+++ b/common/build.gradle
@@ -119,25 +119,25 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api "androidx.activity:activity-ktx:1.1.0-alpha03"
-    api "androidx.activity:activity:1.1.0-alpha03"
-    api 'androidx.core:core-ktx:1.1.0'
+    api "androidx.activity:activity-ktx:1.1.0"
+    api "androidx.activity:activity:1.1.0"
+    api 'androidx.core:core-ktx:1.2.0'
     api 'androidx.multidex:multidex:2.0.1'
     api "com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0"
     //    api 'com.jakewharton.timber:timber:4.5.1'
     api "com.blankj:utilcode:1.24.2"
-    api 'joda-time:joda-time:2.10'
+    api 'joda-time:joda-time:2.10.2'
     api 'com.googlecode.libphonenumber:libphonenumber:8.2.0'
-//    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
+//    api "org.jetbrains.kotlin:kotlin-stdlibc-jdk7:1.3.50"
 //    api "org.jetbrains.kotlin:kotlin-stdlib-jre8"
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.50"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61"
 //    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.60-eap-25"
 
     debugApi 'me.ele:uetool:1.0.17'
     releaseApi 'me.ele:uetool-no-op:1.0.17'
     // if you want to show more attrs about Fresco's DraweeView
 //    debugApi 'me.ele:uetool-fresco:1.0.17'
-    api("com.squareup.okio:okio:2.3.0")
+    api("com.squareup.okio:okio:2.4.3")
     api "androidx.appcompat:appcompat:1.1.0"
     /**
      * ===============================async start================================
@@ -145,9 +145,9 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
     api "org.jetbrains.anko:anko-coroutines:0.10.8"
-    api "io.reactivex.rxjava2:rxkotlin:2.2.0"
-    api "io.reactivex.rxjava2:rxjava:${rootProject.ext.rxjavaVersion}"
-    api "io.reactivex.rxjava2:rxandroid:${rootProject.ext.rxandroidVersion}"
+    api "io.reactivex.rxjava2:rxkotlin:2.3.0"
+    api "io.reactivex.rxjava2:rxjava:2.2.18"
+    api "io.reactivex.rxjava2:rxandroid:2.1.1"
 
     /**
      * ===============================async end================================
@@ -166,7 +166,7 @@ dependencies {
 
     api 'com.alibaba:fastjson:1.2.54'
 
-    api("com.squareup.moshi:moshi:1.8.0")
+    api("com.squareup.moshi:moshi:1.9.2")
     api 'com.squareup.moshi:moshi-adapters:1.8.0'
     api("com.squareup.moshi:moshi-kotlin:1.8.0")
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.8.0")
@@ -188,16 +188,16 @@ dependencies {
     /**
      * ===============================mvvm start================================
      */
-    kapt 'androidx.databinding:databinding-compiler:3.6.0-beta01'
+    kapt 'androidx.databinding:databinding-compiler:4.1.0-alpha01'
 //    annotationProcessor 'androidx.databinding:databinding-compiler:3.6.0-alpha12'
-    api 'androidx.databinding:databinding-runtime:3.6.0-beta01'
+    api 'androidx.databinding:databinding-runtime:4.1.0-alpha01'
     api 'com.github.markzhai:databinding-rv-adapter:1.0.1'
     // Lifecycles only (no ViewModel or LiveData)
-    api 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha05'
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha05'
-    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha05"
-    api "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha05"
-    api "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05"
+    api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    api "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+    api "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     //If you use Java 8 Language, then observe events with DefaultLifecycleObserver
 //    api 'androidx.lifecycle:lifecycle-common-java8:2.1.0-alpha03'
 //    api 'com.trello.rxlifecycle3:rxlifecycle:3.0.0'
