--- a/.travis.yml
+++ b/.travis.yml
@@ -46,8 +46,7 @@ before_install:
 - tar xvf secrets.tar
 - openssl aes-256-cbc -K $encrypted_ec71dae743a4_key -iv $encrypted_ec71dae743a4_iv -in google-services.json.enc -out app/google-services.json -d
 install: echo "install"
-#- sudo apt-get install libncurses5
-- sudo install ncurses-libs.i686 libstdc++.i686 libgcc.i686
+- sudo apt-get install lib32ncurses5
 #- ldconfig -p | grep ncurses
 #- ldconfig -p | grep libtinfo
 #- cd /home/tom/Android/Sdk/build-tools/29.0.2/lib64
