--- a/common/build.gradle
+++ b/common/build.gradle
@@ -139,6 +139,7 @@ dependencies {
 //    debugApi 'me.ele:uetool-fresco:1.0.17'
     api("com.squareup.okio:okio:2.4.3")
     api "androidx.appcompat:appcompat:1.1.0"
+    api 'com.jakewharton:disklrucache:2.0.2'
     /**
      * ===============================async start================================
      */
@@ -194,7 +195,8 @@ dependencies {
     api 'com.github.markzhai:databinding-rv-adapter:1.0.1'
     // Lifecycles only (no ViewModel or LiveData)
     api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
+//    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
+    api 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     api "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
     api "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
