--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,10 +68,7 @@ apply plugin: 'perfplugin'
 //    appId = '3d62251014'
 //    appKey = 'a15ecf84-1786-40c6-abf5-fe975fce22e6'
 //}
-apply plugin: 'io.fabric'
-crashlytics {
-    enableNdk true
-}
+apply plugin: 'com.google.firebase.crashlytics'
 
 def getVersion() {
     [rootProject.ext.minSdkVersion, rootProject.ext.targetSdkVersion, rootProject.ext.versionCode, rootProject.ext.versionName]
@@ -146,6 +143,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             manifestPlaceholders = ['QQ_KEY': 'adf', 'WEXIN_KEY': 'adfaf', 'BUGLY_ENABLE_DEBUG': 'false']
             signingConfig signingConfigs.releaseSigningConfig
+            firebaseCrashlytics {
+                nativeSymbolUploadEnabled true
+            }
 
 
         }
@@ -158,6 +158,9 @@ android {
                     'BUGLY_ENABLE_DEBUG': 'true'
             ]
 //            signingConfig signingConfigs.debugSigningConfig
+            firebaseCrashlytics {
+                mappingFileUploadEnabled false
+            }
         }
     }
     lintOptions {
@@ -193,8 +196,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = "1.8"
@@ -320,8 +323,9 @@ dependencies {
 //    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     kapt "com.github.bumptech.glide:compiler:4.10.0"
 
-    api 'com.crashlytics.sdk.android:crashlytics:2.10.1'
-    api 'com.crashlytics.sdk.android:crashlytics-ndk:2.1.1'
+    api 'com.google.firebase:firebase-analytics:17.2.3'
+    api 'com.google.firebase:firebase-crashlytics:17.0.0-beta02'
+    api 'com.google.firebase:firebase-crashlytics-ndk:17.0.0-beta01'
     //crash and anr
     api 'com.tencent.bugly:nativecrashreport:3.7.1'
     api 'com.tencent.bugly:crashreport:3.0.0'
