--- a/common/build.gradle
+++ b/common/build.gradle
@@ -120,6 +120,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     api "androidx.activity:activity-ktx:1.1.0"
+    api 'androidx.fragment:fragment-ktx:1.2.3'
     api "androidx.activity:activity:1.1.0"
     api 'androidx.core:core-ktx:1.2.0'
     api 'androidx.multidex:multidex:2.0.1'
@@ -130,7 +131,7 @@ dependencies {
     api 'com.googlecode.libphonenumber:libphonenumber:8.2.0'
 //    api "org.jetbrains.kotlin:kotlin-stdlibc-jdk7:1.3.50"
 //    api "org.jetbrains.kotlin:kotlin-stdlib-jre8"
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.70"
 //    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.60-eap-25"
 
     debugApi 'me.ele:uetool:1.0.17'
