--- a/gradle.properties
+++ b/gradle.properties
@@ -1,38 +1,27 @@
-# Project-wide Gradle settings.
-
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
-# For more details on how to configure your build environment visit
+## For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
-
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-android.useAndroidX=true
-android.enableJetifier=true
-
-isComponentMode=false
-KOTLIN_VERSION=1.2.71
-
-firebasePerformanceInstrumentationEnabled=false
-
-#debug start
+#Sat Mar 28 19:26:17 CST 2020
 DEBUG_KEY_ALIAS=123456
 DEBUG_KEY_PASSWORD=123456
-DEBUG_STORE_PASSWORD=123456
 DEBUG_STORE_FILE=keystore/debug.jks
-#debug end
-
-#release start
+DEBUG_STORE_PASSWORD=123456
+KOTLIN_VERSION=1.2.71
 RELEASE_KEY_ALIAS=release
 RELEASE_KEY_PASSWORD=release
-RELEASE_STORE_PASSWORD=release
 RELEASE_STORE_FILE=keystore/release.jks
-#release end
+RELEASE_STORE_PASSWORD=release
+android.enableJetifier=true
+android.useAndroidX=true
+firebasePerformanceInstrumentationEnabled=false
+isComponentMode=false
+org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
