--- a/image/build.gradle
+++ b/image/build.gradle
@@ -89,7 +89,8 @@ dependencies {
      * ===============================image start=============================
      */
     api 'com.github.bumptech.glide:glide:4.11.0'
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     api 'androidx.exifinterface:exifinterface:1.1.0'
     api 'com.github.bumptech.glide:recyclerview-integration:4.11.0'
 
