--- a/mockserver/src/main/AndroidManifest.xml
+++ b/mockserver/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hawksjamesf.mockserver">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application>
         <service
-            android:name=".MockService"
+            android:name=".MockIntentService"
             android:process=":mock_server"
             />
         <service
@@ -11,6 +12,9 @@
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:process=":mock_jobserver"
             />
+        <service android:name=".MockJobIntentService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:process=":mock_jobintentserver"/>
 
         <activity
             android:name="com.hawksjamesf.mockserver.LogDBActivity"
