--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ buildscript {
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
 
         classpath 'com.google.gms:google-services:4.3.3'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0-beta03'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0'
         classpath 'com.google.firebase:perf-plugin:1.3.1'
         classpath 'com.hawksjamesf.plugin:perf:1.0.0'
 //        classpath 'com.google.firebase:firebase-plugins:1.1.5'
