--- a/ypose/CMakeLists.txt
+++ b/ypose/CMakeLists.txt
@@ -1,49 +1,11 @@
-## For more information about using CMake with Android Studio, read the
-## documentation: https://d.android.com/studio/projects/add-native-code.html
-#
-## Sets the minimum version of CMake required to build the native library.
-#
-#cmake_minimum_required(VERSION 3.4.1)
-#
-## Creates and names a library, sets it as either STATIC
-## or SHARED, and provides the relative paths to its source code.
-## You can define multiple libraries, and CMake builds them for you.
-## Gradle automatically packages shared libraries with your APK.
-#add_library( # Sets the name of the library.
-#        hawks
-#
-#        # Sets the library as a shared library.
-#        SHARED
-#
-#        # Provides a relative path to your source file(s).
-#        src/main/jni/hawks/hawks.cpp)
-#add_library( # Sets the name of the library.
-#             native-lib
-#
-#             # Sets the library as a shared library.
-#             SHARED
-#        src/main/jni/nativelib/native-lib.cpp)
-#
-## Searches for a specified prebuilt library and stores the path as a
-## variable. Because CMake includes system libraries in the search path by
-## default, you only need to specify the name of the public NDK library
-## you want to add. CMake verifies that the library exists before
-## completing its build.
-#
-#find_library( # Sets the name of the path variable.
-#              log-lib
-#
-#              # Specifies the name of the NDK library that
-#              # you want CMake to locate.
-#              log )
-#
-## Specifies libraries CMake should link to your target library. You
-## can link multiple libraries, such as libraries you define in this
-## build script, prebuilt third-party libraries, or system libraries.
-#
-#target_link_libraries( # Specifies the target library.
-#                       native-lib
-##                        android
-#                       # Links the target library to the log library
-#                       # included in the NDK.
-#                       ${log-lib} )
+cmake_minimum_required(VERSION 3.4.1)
+set(CMAKE_VERBOSE_MAKEFILE on)
+#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ypose/main/jniLibs/${ANDROID_ABI})
+message(yahfa so outputs--->${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ${lib_src_dir})
+message(yahfa current source dir--->${CMAKE_CURRENT_SOURCE_DIR})
+#message(yahfa lib src ir--->${lib_src_dir})
+set(lib_src_dir ${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp)
+#set(lib_build_dir $ENV{HOME}/tmp/${ANDROID_ABI})
+#set(lib_build_dir ${CMAKE_CURRENT_SOURCE_DIR}/.cxx/tmp/${ANDROID_ABI})
+#file(MAKE_DIRECTORY ${lib_build_dir})
+add_subdirectory(${lib_src_dir}/yahfa)
