--- a/map/build.gradle
+++ b/map/build.gradle
@@ -1,4 +1,3 @@
-println("lib location start")
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: "kotlin-android-extensions"
@@ -55,10 +54,12 @@ dependencies {
 
     api project(path: ':common')
     api project(path: ':uicomponent')
-    api project(path: ':storage')
     api 'com.amap.api:location:4.7.2'
     api 'com.amap.api:search:6.9.2'
     api 'com.amap.api:3dmap:6.9.4'
-
+//    api project(path: ':storage')
+    api 'androidx.room:room-runtime:2.2.5'
+    api 'androidx.room:room-rxjava2:2.2.5'
+    api "androidx.room:room-ktx:2.2.5"
+    kapt 'androidx.room:room-compiler:2.2.5'
 }
-println("lib location end")
