--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,8 @@ image: openjdk:8-jdk
 
 variables:
   ANDROID_COMPILE_SDK: "29"
-  ANDROID_BUILD_TOOLS: "29.0.2"
-  ANDROID_SDK_TOOLS:   "4333796"
+  ANDROID_BUILD_TOOLS: "29.0.3"
+  ANDROID_SDK_TOOLS:   "26.1.1"
 
 before_script:
   - apt-get --quiet update --yes
