--- a/map/src/main/AndroidManifest.xml
+++ b/map/src/main/AndroidManifest.xml
@@ -35,10 +35,10 @@
             android:name=".MapActivity"
             android:label="map page"
             android:hardwareAccelerated="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER"/>-->
+<!--            </intent-filter>-->
         </activity>
 <!--        <activity-alias-->
 <!--            android:name="MapActivity2"-->
@@ -55,11 +55,11 @@
             android:label="location page"
             android:name=".LocationActivity"
             android:hardwareAccelerated="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER"/>
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER"/>-->
 <!--                <category android:name="android.intent.category.DEFAULT"/>-->
-            </intent-filter>
+<!--            </intent-filter>-->
         </activity>
         <service
             android:foregroundServiceType="location"
