--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,19 @@ install: echo "install"
 #- cd /home/tom/Android/Sdk/build-tools/29.0.2/lib64
 #- ln -s /usr/lib/x86_64-linux-gnu/libncurses.so.6 libncurses.so.5
 #- ln -s /usr/lib/x86_64-linux-gnu/libtinfo.so.6 libtinfo.so.5
+- export ANDROID_HOME=~/android-sdk-linux
+- PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/tools/bin:${ANDROID_HOME}/platform-tools
+- yes | sdkmanager --update
+- yes | sdkmanager --licenses
+- ./gradlew dependencies || true
+- sdkmanager "emulator" "tools" "platform-tools" > /dev/null
+- sdkmanager --list | head -20
+- sdkmanager "build-tools;$BUILD_TOOLS_VERSION" "platforms;android-$28" > /dev/null
+- sdkmanager "system-images;android-$EMULATOR_API;$ABI" > /dev/null
+- sdkmanager --list | head -15
+- mkdir "$ANDROID_HOME/licenses" || true
+- echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+- echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
 before_script: echo "before_script"
 script:
 - echo "build the script"
