--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,8 @@ before_script:
   - set +o pipefail
   - yes | android-sdk-linux/tools/bin/sdkmanager --licenses
   - set -o pipefail
-  - apt-get install lib32ncurses5
-
+#  - apt-get install lib32ncurses5
+  - apt install zlib1g-dev libncurses5-dev lib32z1 lib32ncurses6 -y
 stages:
   - build
   - test
