--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,8 @@ before_script:
   - wget --quiet --output-document=commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-${ANDROID_SDK_TOOLS}.zip
   - unzip -d android-sdk-linux commandlinetools.zip
 #  - android-sdk-linux/tools/bin/sdkmanager --update
-  - android-sdk-linux/tools/bin/sdkmanager "platform-tools" "platforms;android-29"
+  - android-sdk-linux/tools/bin/sdkmanager --install "platforms;android-29"
+#  - android-sdk-linux/tools/bin/sdkmanager "platform-tools" "platforms;android-29"
   - echo y | android-sdk-linux/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}" >/dev/null
   - export ANDROID_HOME=$PWD/android-sdk-linux
   - export PATH=$PATH:$PWD/android-sdk-linux/platform-tools/
